Añadido padding y quitado max-width al header

--- a/css/style.css
+++ b/css/style.css
@@ -135,14 +135,13 @@ header p{
         height: 100%;
         display: flex;
         align-items: center;
-        column-gap: 8%;
         padding: 5%;
     }
 
-    header {padding: unset;text-align: left;}
+    header {padding: unset;text-align: left;padding-right: 10%;}
 
 header h1 {
-    font-size: 4em;
+    font-size: 3.5em;
 }
 
 header p {
